# my_opengl_template

./: .gitignore  CMakeLists.txt  README.md
assets/: mybezier.bzs  tea.bzs  teacup.bzs  teapot.bzs  teaspoon.bzs
include/: axis.h  b-spline.h  b-spline.hpp  bezier.h  bezier_object.h  buffer.hpp  buffer_object.hpp  camera.h  cloth.h  controller.h  defines.h  delaunator.h  delaunator.hpp  display.h  enum.h  group.h  group_wrapper.hpp  handler.hpp  light.h  nurbs.h  object.h  object_data.h  object_data_updater.h  object_params.h  picking.h  render_data.h  render_data_updater.h  sampler.h  sampler.hpp  scene.h  shader.h  simpson.h  spline_surface_object.hpp  spline_surfaces_group.hpp  time_system.h  transform.h  utils.h  vertex.h  wind.h  window.h  (+1 more)
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glfw/src/: x11_window.c
shader/: breathe.gs  colorful.vs  edge.gs  explosion.gs  fragmentize.gs  grid.gs  light.fs  light.gs  light.vs  normal.gs  object.fs  object.vs  object_basic.fs  object_basic.gs  object_basic.vs  picking.fs  picking.vs  points.gs  selector.fs  selector.vs
src/: axis.cpp  b-spline.cpp  bezier.cpp  bezier_object.cpp  camera.cpp  cloth.cpp  controller.cpp  delaunator.cpp  display.cpp  glad.c  light.cpp  nurbs.cpp  object.cpp  object_data.cpp  object_data_updater.cpp  picking.cpp  render_data.cpp  render_data_updater.cpp  sampler.cpp  scene.cpp  shader.cpp  simpson.cpp  time_system.cpp  transform.cpp  utils.cpp  wind.cpp  window.cpp
test/: assignment-1.cpp  assignment-2.cpp  assignment-5.cpp  test.cpp
